--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -102,17 +102,44 @@ dataSource:
     jmxExport: true
     driverClassName: org.postgresql.Driver
     dialect: org.hibernate.dialect.PostgreSQLDialect
-    username: user
-    password: password
+    username: user  # замените на ваше имя пользователя
+    password: password  # замените на ваш пароль
     dbCreate: update # create, create-drop, update, none
+    properties:  # Добавьте этот блок для SSL
+        jdbcUrl: jdbc:postgresql://rc1a-sqbvonth8em7um25.mdb.yandexcloud.net:6432/search_hotel_db
+        connectionInitSql: "SELECT version();"
+        initialSize: 5
+        maxActive: 50
+        minIdle: 5
+        maxIdle: 25
+        maxWait: 10000
+        validationQuery: "SELECT 1"
+        testOnBorrow: true
+        testWhileIdle: true
+        timeBetweenEvictionRunsMillis: 60000
+        minEvictableIdleTimeMillis: 60000
+        removeAbandoned: true
+        removeAbandonedTimeout: 300
+        logAbandoned: true
+        jdbcInterceptors: "ConnectionState;StatementCache(max=200)"
+        jdbcProperties:  # SSL параметры
+            ssl: "true"
+            sslmode: "verify-full"
+            sslrootcert: "/home/appuser/.postgresql/root.crt"
 
 environments:
     development:
         dataSource:
-            url: jdbc:postgresql://localhost:5433/search_hotel_db
+            url: jdbc:postgresql://rc1a-sqbvonth8em7um25.mdb.yandexcloud.net:6432/search_hotel_db?ssl=true&sslmode=verify-full&sslrootcert=/home/appuser/.postgresql/root.crt
+            username: user  # замените на ваше имя пользователя
+            password: password  # замените на ваш пароль
     test:
         dataSource:
-            url: jdbc:postgresql://localhost:5433/search_hotel_db_test
+            url: jdbc:postgresql://rc1a-sqbvonth8em7um25.mdb.yandexcloud.net:6432/search_hotel_db_test?ssl=true&sslmode=verify-full&sslrootcert=/home/appuser/.postgresql/root.crt
+            username: user  # замените на ваше имя пользователя
+            password: password  # замените на ваш пароль
     production:
         dataSource:
-            url: jdbc:postgresql://localhost:5433/search_hotel_db_prod
+            url: jdbc:postgresql://rc1a-sqbvonth8em7um25.mdb.yandexcloud.net:6432/search_hotel_db_prod?ssl=true&sslmode=verify-full&sslrootcert=/home/appuser/.postgresql/root.crt
+            username: user  # замените на ваше имя пользователя
+            password: password  # замените на ваш пароль
